overflow fix for chars

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -33,6 +33,7 @@
     position: relative;
     min-width: 50px;
     height: 120px;
+    overflow: visible;
 
     &.sink, &.source {
         border: thin dashed #333;
@@ -48,6 +49,7 @@
     }
 
     svg {
+        overflow: visible;
         height: 100%;
         width: auto;
         left: 0;
